--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -21,9 +21,9 @@
             <h1 style="margin-bottom: 50px;">Ibsys 2 PPS Tool</h1>
             <div [hidden]="loginSuccess">
                 <label >Username</label>
-                <input type="text" placeholder="username" [(ngModel)]="username">
+                <input type="text" style="color: #30426a;" placeholder="username" [(ngModel)]="username">
                 <label>Password</label>
-                <input type="password" placeholder="password"[(ngModel)]="password">
+                <input type="password" style="color: #30426a;" placeholder="password" [(ngModel)]="password">
                 <button class="btn btn-primary" (click)="trylogin()">Login</button>
             </div>
             <div [hidden]="!loginSuccess">
@@ -117,7 +117,7 @@
             <div class="row header">
                 <div class="col-xs-12">
                     <div class="user pull-right">
-                        <label class="actualPeriodLabel">letzte Periode: {{lastPeriod}}</label>
+                        <button class="btn btn-primary actualPeriodLabel" (click)="logout()">Logout</button>
                         <div class="item dropdown">
                             <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-language"></i>
