--- a/client/app/components/forecast/forecast.component.html
+++ b/client/app/components/forecast/forecast.component.html
@@ -16,7 +16,7 @@
             <thead>
             <tr>
                 <th class="text-center" colspan="100%">
-                    {{'forecast_sales' | translate}}
+                    <h3>{{'forecast_sales' | translate}}</h3>
                 </th>
             </tr>
             <tr>
@@ -28,8 +28,8 @@
             </thead>
             <tbody>
             <tr *ngFor="let part of pParts">
-                <td>{{part.typ + part.nummer}}</td>
-                <td *ngFor="let period of periods">
+                <td width="10%" style="padding-right: 5px; padding-bottom: 5px">{{part.typ + part.nummer}}</td>
+                <td *ngFor="let period of periods" width="22.5%" style="padding-right: 5px; padding-bottom: 5px">
                     <input type="number" min="0" class="form-control" [(ngModel)]="verbdindlAuftr['P_' + part.nummer + '_' + period]" (ngModelChange)="updateArrays(part.nummer,period)">
                 </td>
             </tr>
@@ -41,7 +41,7 @@
             <thead>
             <tr>
                 <th class="text-center" colspan="100%">
-                    {{'forecast_plProd' | translate}}
+                    <h3>{{'forecast_plProd' | translate}}</h3>
                 </th>
             </tr>
             <tr>
@@ -53,8 +53,8 @@
             </thead>
             <tbody>
             <tr *ngFor="let part of pParts">
-                <td>{{part.typ + part.nummer}}</td>
-                <td *ngFor="let period of periods">
+                <td width="10%" style="padding-right: 5px; padding-bottom: 5px">{{part.typ + part.nummer}}</td>
+                <td *ngFor="let period of periods" width="22.5%" style="padding-right: 5px; padding-bottom: 5px">
                     <input type="number" min="0" class="form-control" [(ngModel)]="geplProd['P_' + part.nummer + '_' + period]" (ngModelChange)="updateArrays(part.nummer,period)">
                 </td>
             </tr>
@@ -66,7 +66,7 @@
             <thead>
             <tr>
                 <th class="text-center" colspan="100%">
-                    {{'forecast_plRemStock' | translate}}
+                    <h3>{{'forecast_plRemStock' | translate}}</h3>
                 </th>
             </tr>
             <tr>
@@ -78,8 +78,8 @@
             </thead>
             <tbody>
             <tr *ngFor="let part of pParts">
-                <td>{{part.typ + part.nummer}}</td>
-                <td *ngFor="let period of periods">
+                <td width="10%" style="padding-right: 5px; padding-bottom: 5px">{{part.typ + part.nummer}}</td>
+                <td *ngFor="let period of periods" width="22.5%" style="padding-right: 5px; padding-bottom: 5px">
                     <input type="number" min="0" class="form-control" readonly [(ngModel)]="vorausBestand['P_' + part.nummer + '_' + period]">
                 </td>
             </tr>
@@ -93,7 +93,7 @@
             <thead>
             <tr>
                 <th class="text-center" colspan="100%">
-                    {{'forecast_directSales' | translate}}
+                    <h3>{{'forecast_directSales' | translate}}</h3>
                 </th>
             </tr>
             <tr>
@@ -105,10 +105,10 @@
             </thead>
             <tbody>
             <tr *ngFor="let part of pParts">
-                <td>{{part.typ + part.nummer}}</td>
-                <th> <input type="number" min="0" class="form-control" [(ngModel)]="menge['P_' + part.nummer]" (ngModelChange)="saveForecast()"> </th>
-                <th> <input type="number" min="0" class="form-control" [(ngModel)]="preis['P_' + part.nummer]" (ngModelChange)="saveForecast()"> </th>
-                <th> <input type="number" min="0" class="form-control" [(ngModel)]="strafe['P_' + part.nummer]" (ngModelChange)="saveForecast()"> </th>
+                <td width="10%" style="padding-right: 5px; padding-bottom: 5px">{{part.typ + part.nummer}}</td>
+                <td width="22.5%" style="padding-right: 5px; padding-bottom: 5px"> <input type="number" min="0" class="form-control" [(ngModel)]="menge['P_' + part.nummer]" (ngModelChange)="saveForecast()"> </td>
+                <td width="22.5%" style="padding-right: 5px; padding-bottom: 5px"> <input type="number" min="0" class="form-control" [(ngModel)]="preis['P_' + part.nummer]" (ngModelChange)="saveForecast()"> </td>
+                <td width="22.5%" style="padding-bottom: 5px"> <input type="number" min="0" class="form-control" [(ngModel)]="strafe['P_' + part.nummer]" (ngModelChange)="saveForecast()"> </td>
             </tr>
             </tbody>
         </table>
