--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -88,13 +88,7 @@
                 <a routerLink="/partsLists" routerLinkActive="active">{{'sidebar_partsLists' | translate}}<span class="menu-icon fa fa-sitemap"></span></a>
             </li>
             <li class="sidebar-list">
-                <a routerLink="/kpartAllocation" routerLinkActive="active">{{'sideBar_PartUsage' | translate}}<span class="menu-icon fa fa-bar-chart"></span></a>
-            </li>
-            <li class="sidebar-list">
-                <a>{{'sidebar_ordersWork' | translate}}<span class="menu-icon fa fa-cogs"></span></a>
-            </li>
-            <li class="sidebar-list">
-                <a>{{'sidebar_waitingWorkst' | translate}}<span class="menu-icon fa fa-stop-circle"></span></a>
+                <a routerLink="/kpartAllocation" routerLinkActive="active">{{'sideBar_PartUsage' | translate}}<span class="menu-icon fa fa-university"></span></a>
             </li>
             <li class="sidebar-list">
                 <a routerLink="/warehousestock" routerLinkActive="active">{{'sidebar_warehouseStock' | translate}}<span class="menu-icon fa fa-bar-chart"></span></a>
