--- a/client/app/components/capacityPlanning/capacityPlanning.component.html
+++ b/client/app/components/capacityPlanning/capacityPlanning.component.html
@@ -19,6 +19,7 @@
           <a class="" routerLink="/xmlExport"><div>{{'xmlExport' | translate}}</div></a>
       </div>
   </div>
+  <div class="container-fluid">
     <table class="table-responsive table-bordered table-striped">
         <thead>
         <tr>
@@ -113,4 +114,5 @@
         </tr>
         </tbody>
     </table>
-
+  </div>
+  <br>
