--- a/client/app/components/materialPlanningEP/materialPlanningEP.component.html
+++ b/client/app/components/materialPlanningEP/materialPlanningEP.component.html
@@ -11,6 +11,7 @@
     </div>
 </div>
 
+<div class="container-fluid">
 <div class="form-group">
     <label for="mpEP_pparts">{{'mpEP_Product' | translate}}</label>
     <ss-multiselect-dropdown [options]="productOptions" [texts]="multiSelectTexts" [settings]="productSettings"
@@ -64,4 +65,5 @@
 
         </tbody>
     </table>
+</div>
 </div>
