--- a/client/app/components/overview/partsLists/partsLists.component.html
+++ b/client/app/components/overview/partsLists/partsLists.component.html
@@ -1,3 +1,15 @@
+<div class="well">
+    <div class="">
+        <div class="row">
+            <span>
+                <h2 align="center">{{'sidebar_partsLists' | translate}}
+                </h2>
+            </span>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid">
 <div class="form-group">
     <label for="partsList_pparts">{{'setPartsList_Product' | translate}}</label>
     <ss-multiselect-dropdown [options]="productOptions" [texts]="multiSelectTexts" [settings]="productSettings"
@@ -120,5 +132,6 @@
     </table>
         </div>
     </div>
+</div>
 </div>
 </div>
