--- a/client/app/components/dashboard/dashboard.component.html
+++ b/client/app/components/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <div class="">
         <div class="row">
             <span>
-                <h2>{{'sidebar_dashboard' | translate}}
+                <h2 align="center">{{'sidebar_dashboard' | translate}}
                     <button class="btn btn-primary btn-lg pull-right" (click)="setConfig()">
                         <i class="fa fa-cogs"></i>
                     </button>
@@ -12,6 +12,7 @@
     </div>
 </div>
 
+<div class="container-fluid">
 <div class="row">
     <div class="panel panel-danger">
         <div class="panel-heading">
@@ -92,6 +93,7 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 
 <modal #configuration>
