--- a/client/app/components/settings/parts/parts.component.html
+++ b/client/app/components/settings/parts/parts.component.html
@@ -1,3 +1,14 @@
+<div class="well">
+    <div class="">
+        <div class="row">
+            <span>
+                <h2 align="center">{{'setParts_parts' | translate}}
+                </h2>
+            </span>
+        </div>
+    </div>
+</div>
+
 <div class="well col-md-3" style="margin-left: 1%; margin-right: 1%;">
     <div class="form-group">
         <label for="part_typ">{{'setParts_typ' | translate}}</label>
@@ -5,33 +16,40 @@
                                  [(ngModel)]="part.typ" id="part_typ">
         </ss-multiselect-dropdown>
     </div>
-    <div class="form-group"  [hidden]="!(part.typ != undefined && part.typ.length > 0)">
+    <div class="form-group" [hidden]="!(part.typ != undefined && part.typ.length > 0)">
         <label for="part_nummer">{{'setParts_number' | translate}}</label>
-        <input type="number" [(ngModel)]="part.nummer" name="nummer" class="form-control" placeholder="{{'setParts_number' | translate}}" id="part_nummer">
+        <input type="number" [(ngModel)]="part.nummer" name="nummer" class="form-control"
+               placeholder="{{'setParts_number' | translate}}" id="part_nummer">
     </div>
     <div class="form-group" [hidden]="!(part.typ != undefined && part.typ.length > 0)">
         <label for="part_bez">{{'setParts_title' | translate}}</label>
-        <input type="text" [(ngModel)]="part.bezeichnung" name="bezeichnung" class="form-control" placeholder="{{'setParts_title' | translate}}" id="part_bez">
+        <input type="text" [(ngModel)]="part.bezeichnung" name="bezeichnung" class="form-control"
+               placeholder="{{'setParts_title' | translate}}" id="part_bez">
     </div>
     <div class="form-group" [hidden]="!(part.typ != undefined && part.typ.length > 0)">
         <label for="part_wert">{{'setParts_worth' | translate}}</label>
-        <input type="number" min="1" [(ngModel)]="part.wert" name="wert" class="form-control" placeholder="{{'setParts_worth' | translate}}" id="part_wert">
+        <input type="number" min="1" [(ngModel)]="part.wert" name="wert" class="form-control"
+               placeholder="{{'setParts_worth' | translate}}" id="part_wert">
     </div>
     <div class="form-group" [hidden]="!(part.typ != undefined && part.typ.length > 0)">
         <label for="part_nummer">{{'setParts_stock' | translate}}</label>
-        <input type="number" [(ngModel)]="part.lagerMenge" name="lagermenge" class="form-control" placeholder="{{'setParts_stock' | translate}}" id="part_lagermenge">
+        <input type="number" [(ngModel)]="part.lagerMenge" name="lagermenge" class="form-control"
+               placeholder="{{'setParts_stock' | translate}}" id="part_lagermenge">
     </div>
     <div class="form-group" [hidden]="!(part.typ != undefined && part.typ[0] == '3' && part.typ[0] != undefined)">
         <label for="part_lieferfrist">{{'setParts_delPeriod' | translate}}</label>
-        <input type="number" [(ngModel)]="part.lieferfrist" name="lieferfrist" class="form-control" placeholder="{{'setParts_delPeriod' | translate}}" id="part_lieferfrist">
+        <input type="number" [(ngModel)]="part.lieferfrist" name="lieferfrist" class="form-control"
+               placeholder="{{'setParts_delPeriod' | translate}}" id="part_lieferfrist">
     </div>
     <div class="form-group" [hidden]="!(part.typ != undefined && part.typ[0] == '3' && part.typ[0] != undefined)">
         <label for="part_abweichung">{{'setParts_deviation' | translate}}</label>
-        <input type="number" [(ngModel)]="part.abweichung" name="abweichung" class="form-control" placeholder="{{'setParts_deviation' | translate}}" id="part_abweichung">
+        <input type="number" [(ngModel)]="part.abweichung" name="abweichung" class="form-control"
+               placeholder="{{'setParts_deviation' | translate}}" id="part_abweichung">
     </div>
     <div class="form-group" [hidden]="!(part.typ != undefined && part.typ[0] == '3' && part.typ[0] != undefined)">
         <label for="part_diskontmenge">{{'setParts_discount' | translate}}</label>
-        <input type="number" [(ngModel)]="part.diskontmenge" name="diskontmenge" class="form-control" placeholder="{{'setParts_discount' | translate}}" id="part_diskontmenge">
+        <input type="number" [(ngModel)]="part.diskontmenge" name="diskontmenge" class="form-control"
+               placeholder="{{'setParts_discount' | translate}}" id="part_diskontmenge">
     </div>
     <div class="form-group" [hidden]="!(part.typ != undefined && part.typ.length > 0)">
         <label for="part_verwendung">{{'setParts_usage' | translate}}</label>
@@ -40,15 +58,20 @@
         </ss-multiselect-dropdown>
     </div>
     <div class="form-group" [hidden]="!(part.typ != undefined && part.typ[0] != '3' && part.typ[0] != undefined)">
-        <button type="button" class="btn btn-default btn-block" (click)="modalBestandteile.open()">{{'setParts_components' | translate}}</button>
+        <button type="button" class="btn btn-default btn-block" (click)="modalBestandteile.open()">
+            {{'setParts_components' | translate}}
+        </button>
     </div>
     <div class="form-group" [hidden]="!(part.typ != undefined && part.typ[0] != '3' && part.typ[0] != undefined)">
-        <button type="button" class="btn btn-default btn-block" (click)="modalArbeitsplaetze.open('lg')">{{'setParts_workstations' | translate}}</button>
+        <button type="button" class="btn btn-default btn-block" (click)="modalArbeitsplaetze.open('lg')">
+            {{'setParts_workstations' | translate}}
+        </button>
     </div>
 
     <div class="form-group" align="right" [hidden]="!(part.typ != undefined && part.typ.length > 0)">
         <button type="button" class="btn btn-danger" (click)="resetAll()">
-            {{'setParts_reset' | translate}}</button>
+            {{'setParts_reset' | translate}}
+        </button>
         <button type="button" class="btn btn-success" (click)="updatePart($event)">
             <span *ngIf="!part._id">{{'setParts_add' | translate}}</span>
             <span *ngIf="part._id">{{'setParts_update' | translate}}</span>
@@ -56,51 +79,59 @@
     </div>
 </div>
 
-<div class="well col-md-8" style="margin-left: 1%; margin-right: 1%;">
-    <div class="well col-md-6">
-        <label for="part_search">{{'setParts_search' | translate}}</label>
-        <input [(ngModel)]="searchText" class="form-control" placeholder="{{'setParts_searchEmptyText' | translate}}" id="part_search">
+<div class="container-fluid col-md-8" style="margin-left: 1%; margin-right: 1%;">
+    <div class="row">
+        <div class="well">
+            <label for="part_search">{{'setParts_search' | translate}}</label>
+            <input [(ngModel)]="searchText" class="form-control"
+                   placeholder="{{'setParts_searchEmptyText' | translate}}" id="part_search">
+        </div>
     </div>
-    <table width="100%">
-        <thead>
-        <tr>
-            <th width="10%">{{'setParts_number' | translate}}</th>
-            <th width="25%">{{'setParts_title' | translate}}</th>
-            <th width="10%">{{'setParts_typ' | translate}}</th>
-            <th width="15%">{{'setParts_worth' | translate}}</th>
-            <th width="15%">{{'setParts_stock' | translate}}</th>
-            <th width="12.5%"></th>
-            <th width="12.5%"></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let pt of parts | partPipe: searchText" style="height: 40px;">
-            <td width="10%">
-                {{pt.nummer}}
-            </td>
-            <td width="25%">
-                {{pt.bezeichnung | translate}}
-            </td>
-            <td width="10%">
-                {{pt.typ}}
-            </td>
-            <td width="15%">
-                {{pt.wert}}
-            </td>
-            <td width="15%">
-                {{pt.lagerMenge}}
-            </td>
-            <td width="12.5%" style="padding-right: 5px" align="right">
-                <input type="button"  value="{{'setParts_edit' | translate}}"
-                       class="btn btn-info" (click)="setPart(pt)">
-            </td>
-            <td width="12.5%" style="padding-left: 5px" align="left">
-                <input type="button"  value="{{'setParts_delete' | translate}}"
-                       class="btn btn-danger" (click)="deletePart(pt)">
-            </td>
-        </tr>
-        </tbody>
-    </table>
+
+    <div class="row">
+        <div class="well">
+            <table width="100%">
+                <thead>
+                <tr>
+                    <th width="10%">{{'setParts_number' | translate}}</th>
+                    <th width="25%">{{'setParts_title' | translate}}</th>
+                    <th width="10%">{{'setParts_typ' | translate}}</th>
+                    <th width="15%">{{'setParts_worth' | translate}}</th>
+                    <th width="15%">{{'setParts_stock' | translate}}</th>
+                    <th width="12.5%"></th>
+                    <th width="12.5%"></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let pt of parts | partPipe: searchText" style="height: 40px;">
+                    <td width="10%">
+                        {{pt.nummer}}
+                    </td>
+                    <td width="25%">
+                        {{pt.bezeichnung | translate}}
+                    </td>
+                    <td width="10%">
+                        {{pt.typ}}
+                    </td>
+                    <td width="15%">
+                        {{pt.wert}}
+                    </td>
+                    <td width="15%">
+                        {{pt.lagerMenge}}
+                    </td>
+                    <td width="12.5%" style="padding-right: 5px" align="right">
+                        <input type="button" value="{{'setParts_edit' | translate}}"
+                               class="btn btn-info" (click)="setPart(pt)">
+                    </td>
+                    <td width="12.5%" style="padding-left: 5px" align="left">
+                        <input type="button" value="{{'setParts_delete' | translate}}"
+                               class="btn btn-danger" (click)="deletePart(pt)">
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
 
 <modal #modalBestandteile style="width: 100%">
