--- a/client/app/components/settings/workstations/workstations.component.html
+++ b/client/app/components/settings/workstations/workstations.component.html
@@ -1,6 +1,14 @@
-<div class="container-fluid">
-    <h1>{{'setWorkstations_workstations' | translate}}</h1>
+<div class="well">
+    <div class="">
+        <div class="row">
+            <span>
+                <h2 align="center">{{'setWorkstations_workstations' | translate}}
+                </h2>
+            </span>
+        </div>
+    </div>
 </div>
+
 <div class="well col-md-3" style="margin-left: 1%; margin-right: 1%;">
     <div class="form-group">
         <label for="ws_nummer">{{'setWorkstations_number' | translate}}</label>
