XML import Hack final

--- a/client/app/components/xmlImport/xmlImport.component.html
+++ b/client/app/components/xmlImport/xmlImport.component.html
@@ -20,7 +20,8 @@
                     <div style="position: relative">
                         <input type="file" (change)="changeListener($event)" style="position: relative; z-index: 2; opacity: 0; filter: alpha(opacity:0)">
                         <div style="position: absolute; top: 0px; left: 0px; z-index: 1">
-                            <button type="button" class="btn btn-default btn-xs">Test</button>
+                            <button type="button" class="btn btn-default btn-xs">{{'xmlImport_chooseFile' | translate}}</button>
+                            {{fileName}}
                         </div>
 
                     </div>
