Beta Version: Workflowanpassung

--- a/client/app/components/home/home.component.html
+++ b/client/app/components/home/home.component.html
@@ -1,23 +1,38 @@
-
 <div class="container">
-        <div style="padding-bottom: 150px">
-                <div align="center">
-                        <h1 style="margin-bottom: 50px;">Ibsys 2 PPS Tool</h1>
-                        <h3 style="margin-bottom: 20px;">{{'home_welcome' | translate}}</h3>
-                        <label class="text-center"></label>
-                        <div id="bc1" class="myBreadcrumb" style="margin-bottom: 40px;">
-                                <a class="" routerLink="/xmlImport"><div>{{'xmlImport' | translate}}</div></a>
-                                <a class="" routerLink="/forecast"><div>{{'prediction_planning' | translate}}</div></a>
-                                <a class="" routerLink="/materialPlanning"><div>{{'material_Planning' | translate}}</div></a>
-                                <a class="" routerLink="//materialPlanningEP"><div>{{'mpEP_MaterialPlanningEP' | translate}}</div></a>
-                                <a class="" routerLink="/prioritization"><div>{{'sidebar_prio' | translate}}</div></a>
-                                <a class="" routerLink="/capacityPlanning"><div>{{'capacity_planning' | translate}}</div></a>
-                                <a class="" routerLink="/xmlExport"><div>{{'xmlExport' | translate}}</div></a>
-                        </div>
-                        <h3 style="margin-bottom: 20px;">{{'hoem_or' | translate}}</h3>
-                        <div id="bc2" class="myBreadcrumb">
-                                <a class="" routerLink="/dashboard"><div>{{'sidebar_dashboard' | translate}}</div></a>
-                        </div>
-                </div>
+    <div style="padding-bottom: 150px">
+        <div align="center">
+            <h1 style="margin-bottom: 50px;">Ibsys 2 PPS Tool</h1>
+            <h3 style="margin-bottom: 20px;">{{'home_welcome' | translate}}</h3>
+            <label class="text-center"></label>
+            <div id="bc1" class="myBreadcrumb" style="margin-bottom: 40px;">
+                <a class="" routerLink="/xmlImport">
+                    <div>{{'xmlImport' | translate}}</div>
+                </a>
+                <a class="" routerLink="/forecast">
+                    <div>{{'prediction_planning' | translate}}</div>
+                </a>
+                <a class="" routerLink="//materialPlanningEP">
+                    <div>{{'mpEP_MaterialPlanningEP' | translate}}</div>
+                </a>
+                <a class="" routerLink="/materialPlanning">
+                    <div>{{'material_Planning' | translate}}</div>
+                </a>
+                <a class="" routerLink="/prioritization">
+                    <div>{{'sidebar_prio' | translate}}</div>
+                </a>
+                <a class="" routerLink="/capacityPlanning">
+                    <div>{{'capacity_planning' | translate}}</div>
+                </a>
+                <a class="" routerLink="/xmlExport">
+                    <div>{{'xmlExport' | translate}}</div>
+                </a>
+            </div>
+            <h3 style="margin-bottom: 20px;">{{'hoem_or' | translate}}</h3>
+            <div id="bc2" class="myBreadcrumb">
+                <a class="" routerLink="/dashboard">
+                    <div>{{'sidebar_dashboard' | translate}}</div>
+                </a>
+            </div>
         </div>
+    </div>
 </div>
