--- a/client/app/components/materialPlanningEP/materialPlanningEP.component.html
+++ b/client/app/components/materialPlanningEP/materialPlanningEP.component.html
@@ -1,69 +1,99 @@
 <div class="well text-center">
     <h2 style="margin-bottom: 20px; margin-top: 0px;">{{'mpEP_MaterialPlanningEP' | translate}}</h2>
     <div id="bc1" class="myBreadcrumb">
-        <a class="completed" routerLink="/xmlImport"><div>{{'xmlImport' | translate}}</div></a>
-        <a class="completed" routerLink="/forecast"><div>{{'prediction_planning' | translate}}</div></a>
-        <a class="completed" routerLink="/materialPlanning"><div>{{'material_Planning' | translate}}</div></a>
-        <a class="active" routerLink="//materialPlanningEP"><div>{{'mpEP_MaterialPlanningEP' | translate}}</div></a>
-        <a class="" routerLink="/prioritization"><div>{{'sidebar_prio' | translate}}</div></a>
-        <a class="" routerLink="/capacityPlanning"><div>{{'capacity_planning' | translate}}</div></a>
-        <a class="" routerLink="/xmlExport"><div>{{'xmlExport' | translate}}</div></a>
+        <a class="completed" routerLink="/xmlImport">
+            <div>{{'xmlImport' | translate}}</div>
+        </a>
+        <a class="completed" routerLink="/forecast">
+            <div>{{'prediction_planning' | translate}}</div>
+        </a>
+        <a class="active" routerLink="//materialPlanningEP">
+            <div>{{'mpEP_MaterialPlanningEP' | translate}}</div>
+        </a>
+        <a class="" routerLink="/materialPlanning">
+            <div>{{'material_Planning' | translate}}</div>
+        </a>
+        <a class="" routerLink="/prioritization">
+            <div>{{'sidebar_prio' | translate}}</div>
+        </a>
+        <a class="" routerLink="/capacityPlanning">
+            <div>{{'capacity_planning' | translate}}</div>
+        </a>
+        <a class="" routerLink="/xmlExport">
+            <div>{{'xmlExport' | translate}}</div>
+        </a>
     </div>
 </div>
 
 <div class="container-fluid">
-<div class="form-group">
-    <label for="mpEP_pparts">{{'mpEP_Product' | translate}}</label>
-    <ss-multiselect-dropdown [options]="productOptions" [texts]="multiSelectTexts" [settings]="productSettings"
-                             [(ngModel)]="auswahl" id="mpEP_pparts" (ngModelChange)="filterList($event)">
+    <div class="form-group">
+        <label for="mpEP_pparts">{{'mpEP_Product' | translate}}</label>
+        <ss-multiselect-dropdown [options]="productOptions" [texts]="multiSelectTexts" [settings]="productSettings"
+                                 [(ngModel)]="auswahl" id="mpEP_pparts" (ngModelChange)="filterList($event)">
 
-    </ss-multiselect-dropdown>
-</div>
+        </ss-multiselect-dropdown>
+    </div>
 
-<div class="container-fluid well" [hidden]="!(auswahl != undefined && auswahl.length == 1)">
-    <table class="table-responsive">
-        <thead>
-        <tr class="mpHeading">
-            <th></th>
-            <th>{{'mpEP_salesOrders' | translate}}</th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th>{{'mpEP_plannedWarehouseEnd' | translate}}</th>
-            <th></th>
-            <th>{{'mpEP_WarehouseEndPeriod' | translate}}</th>
-            <th></th>
-            <th>{{'mpEP_OrderWaitingQueue' | translate}}</th>
-            <th></th>
-            <th>{{'mpEP_WorkInProgress' | translate}}</th>
-            <th></th>
-            <th>{{'mpEP_ProdOrders' | translate}}</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let pt of partsListSingle">
-            <td width="4%" align="left">{{pt.teil.child.typ + pt.teil.child.nummer}}</td>
-            <td width="10%"><input type="number" class="form-control" [(ngModel)]="auftraegeVerbindl[part.typ + part.nummer + '_' + pt.teil.child.nummer]" readonly></td>
+    <div class="container-fluid well" [hidden]="!(auswahl != undefined && auswahl.length == 1)">
+        <table class="table-responsive">
+            <thead>
+            <tr class="mpHeading">
+                <th></th>
+                <th>{{'mpEP_salesOrders' | translate}}</th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th>{{'mpEP_plannedWarehouseEnd' | translate}}</th>
+                <th></th>
+                <th>{{'mpEP_WarehouseEndPeriod' | translate}}</th>
+                <th></th>
+                <th>{{'mpEP_OrderWaitingQueue' | translate}}</th>
+                <th></th>
+                <th>{{'mpEP_WorkInProgress' | translate}}</th>
+                <th></th>
+                <th>{{'mpEP_ProdOrders' | translate}}</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let pt of partsListSingle">
+                <td width="4%" align="left">{{pt.teil.child.typ + pt.teil.child.nummer}}</td>
+                <td width="10%"><input type="number" class="form-control"
+                                       [(ngModel)]="auftraegeVerbindl[part.typ + part.nummer + '_' + pt.teil.child.nummer]"
+                                       readonly></td>
 
-            <td *ngIf="pt.teil.child.typ !== 'P'" width="4%" align="center">+</td>
-            <td *ngIf="pt.teil.child.typ !== 'P'" width="10%" align="center"><input type="number" class="form-control" [(ngModel)]="auftraegeWarteschlAddiert[part.typ + part.nummer + '_' + pt.teil.child.nummer]" readonly></td>
-            <td *ngIf="pt.teil.child.typ !== 'P'" width="4%" align="center">+</td>
+                <td *ngIf="pt.teil.child.typ !== 'P'" width="4%" align="center">+</td>
+                <td *ngIf="pt.teil.child.typ !== 'P'" width="10%" align="center"><input type="number"
+                                                                                        class="form-control"
+                                                                                        [(ngModel)]="auftraegeWarteschlAddiert[part.typ + part.nummer + '_' + pt.teil.child.nummer]"
+                                                                                        readonly></td>
+                <td *ngIf="pt.teil.child.typ !== 'P'" width="4%" align="center">+</td>
 
-            <td *ngIf="pt.teil.child.typ === 'P'" width="4%" colspan="3" align="center">+</td>
+                <td *ngIf="pt.teil.child.typ === 'P'" width="4%" colspan="3" align="center">+</td>
 
-            <td width="10%" align="center"><input type="number" class="form-control" min="0" [(ngModel)]="geplLagerbestand[part.typ + part.nummer + '_' + pt.teil.child.nummer]" (ngModelChange)="updateArrays(false)" (focusout)="updateArrays(false)"></td>
-            <td width="4%" align="center">-</td>
-            <td width="10%" align="center"><input type="number" class="form-control" [(ngModel)]="lagerbestandVorperiode[part.typ + part.nummer + '_' + pt.teil.child.nummer]" readonly></td>
-            <td width="4%" align="center">-</td>
-            <td width="10%" align="center"><input type="number" class="form-control" [(ngModel)]="auftraegeWarteschl[part.typ + part.nummer + '_' + pt.teil.child.nummer]" readonly></td>
-            <td width="4%" align="center">-</td>
-            <td width="10%" align="center"><input type="number" class="form-control" [(ngModel)]="auftraegeBearb[part.typ + part.nummer + '_' + pt.teil.child.nummer]" readonly></td>
-            <td width="4%" align="center">=</td>
-            <td width="12%" align="center"><input type="number" class="form-control" [(ngModel)]="prodAuftraege[part.typ + part.nummer + '_' + pt.teil.child.nummer]" readonly></td>
-            <br><br>
-        </tr>
+                <td width="10%" align="center"><input type="number" class="form-control" min="0"
+                                                      [(ngModel)]="geplLagerbestand[part.typ + part.nummer + '_' + pt.teil.child.nummer]"
+                                                      (ngModelChange)="updateArrays(false)"
+                                                      (focusout)="updateArrays(false)"></td>
+                <td width="4%" align="center">-</td>
+                <td width="10%" align="center"><input type="number" class="form-control"
+                                                      [(ngModel)]="lagerbestandVorperiode[part.typ + part.nummer + '_' + pt.teil.child.nummer]"
+                                                      readonly></td>
+                <td width="4%" align="center">-</td>
+                <td width="10%" align="center"><input type="number" class="form-control"
+                                                      [(ngModel)]="auftraegeWarteschl[part.typ + part.nummer + '_' + pt.teil.child.nummer]"
+                                                      readonly></td>
+                <td width="4%" align="center">-</td>
+                <td width="10%" align="center"><input type="number" class="form-control"
+                                                      [(ngModel)]="auftraegeBearb[part.typ + part.nummer + '_' + pt.teil.child.nummer]"
+                                                      readonly></td>
+                <td width="4%" align="center">=</td>
+                <td width="12%" align="center"><input type="number" class="form-control"
+                                                      [(ngModel)]="prodAuftraege[part.typ + part.nummer + '_' + pt.teil.child.nummer]"
+                                                      readonly></td>
+                <br><br>
+            </tr>
 
-        </tbody>
-    </table>
-</div>
+            </tbody>
+        </table>
+    </div>
 </div>
