--- a/client/app/components/materialPlanningEP/materialPlanningEP.component.html
+++ b/client/app/components/materialPlanningEP/materialPlanningEP.component.html
@@ -72,8 +72,8 @@
 
                 <td width="10%" align="center"><input type="number" class="form-control" min="0"
                                                       [(ngModel)]="geplLagerbestand[part.typ + part.nummer + '_' + pt.teil.child.nummer]"
-                                                      (ngModelChange)="updateArrays(false)"
-                                                      (focusout)="updateArrays(false)"></td>
+                                                      (ngModelChange)="updateArrays(false,true)"
+                                                      (focusout)="updateArrays(false,true)"></td>
                 <td width="4%" align="center">-</td>
                 <td width="10%" align="center"><input type="number" class="form-control"
                                                       [(ngModel)]="lagerbestandVorperiode[part.typ + part.nummer + '_' + pt.teil.child.nummer]"
